<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/ip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number|textCapWords"
        android:digits="0123456789."
        android:singleLine="true"
        android:hint="@string/ip_hint" />
    
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
	    <Button
	        android:id="@+id/start_sensor"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/start" />
	    <Button
	        android:id="@+id/stop_sensor"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/stop" />
    </LinearLayout>
    
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
	    <Button
	        android:id="@+id/start_mouse"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/start" />
	    <Button
	        android:id="@+id/stop_mouse"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/stop" />
    </LinearLayout>
    
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
	    <Button
	        android:id="@+id/home"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/home" />
	    <Button
	        android:id="@+id/menu"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/menu" />
	    
	    <Button
	        android:id="@+id/back"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/back" />

    </LinearLayout>
    
	<View
        android:id="@+id/touch_pad"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:background="@android:color/white" />
</LinearLayout>